fixed spacing between images and added new images for the projects

--- a/css/style.css
+++ b/css/style.css
@@ -718,8 +718,8 @@ label {
 
 .project_list {
   display: flex;
-  /* flex-wrap: wrap; */
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px;
 }
 
 .ohDeerScreenshot {
